fix: remove horizontal scrollbar

--- a/assets/stylesheets/layouts/home.css
+++ b/assets/stylesheets/layouts/home.css
@@ -3,7 +3,7 @@
    ========================================================================== */
    .home {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     display: flex;
     padding-top: 20vh;
     background-color: var(--color-background);
